c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/scalar_required/compare_unions.c
// Can't compare objects of union type

union u { long l; };

int main(void){
    union u x = {1};
    x == x; // illegal
    return 0;
}